--- a/templates/file_content.html
+++ b/templates/file_content.html
@@ -6,6 +6,6 @@
     <title>{{ file_name }}</title>
 </head>
 <body>
-    <pre>{{ content }}</pre>
+    <pre>{{ content | safe }}</pre>
 </body>
 </html>
